@@ -96,6 +96,8 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       PTP: Fix management packet fields.
     User interface:
       Warn that options -A, -x[x] and -X[X] are mutually exclusive.
+      For PCAP_ERROR_CAPTURE_NOTSUP, show the error message provided
+        by libpcap for that error if it's non-empty.
     Source code:
       Fix '-tt' option printing when time > 2106-02-07T06:28:15Z.
       Add sub-second packet timestamp checks for invalid micro/nano.
